edit responsive video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,11 @@ body {
     margin: 50px 0;
 }
 
+.workingspace video {
+    width: 100%;
+    height: auto;
+}
+
 
 /* Untuk Desktop */
 @media (min-width: 992px) { 
