--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,11 @@ body {
     color: #1C2C5D;
     font-weight: 200;
 }
+
+.teams img {
+    height: 200px;
+}
+
 /* Footer */
 .footer {
     margin-top: 100px;
